texto + style sections & skills

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
          <ul>
             <li>Sistemas Microinformáticos y Redes</li>
             <li>Desarrollo en PHP con Laravel y Filament</li>
-            <li>Programación en Python con Pygame</li>
+            <li>Programación con Python y Pygame</li>
             <li>Atención al cliente y soporte técnico</li>
             <li>Administración de servidores en la nube</li>
          </ul>
