--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta name="description" content="Portafolio de Pau Marmi Plaza">
    <script src="functions.js"></script>
-   <link rel="icon" type="image/png" href="logo_poner.png">
+   <link rel="icon" type="image/png" href="img/hacker.png">
    <link rel="stylesheet" href="style.css" type="text/css">
    <title>Pau Marmi Plaza - Portafolio</title>
 </head>
 <body>
+   <a href="#top" id="scrollToTop" class="scroll-top-btn">↑</a>
    <header>
       <div class="container">
          <div id="header">
             <a id="logo" href="#">
-               <img src="logo_poner.png" alt="Logo de Pau Marmi Plaza" class="header-logo">
+               <img src="img/hacker.png" alt="Logo de Pau Marmi Plaza" class="header-logo">
             </a>
             <nav>
                <input id="menu-toggle" type="checkbox">
